# school

./: README.md  config.py  database.py  pyproject.toml
migrations/: env.py
migrations/versions/: 110ffc235f9a_.py
pgdata/: postmaster.pid
pgdata/base/1/: 2619  pg_internal.init
pgdata/base/16384/: 16392  pg_internal.init
pgdata/base/5/: pg_internal.init
pgdata/global/: 1260  1262  2671  pg_control  pg_internal.init
src/: main.py
src/user/: crud.py  depends.py  model.py  schema.py  view.py
